# nlu

./: dep_sync.py
basic/: CMakeLists.txt
basic/src/conf/: conf.h
basic/src/conf/details/: conf.cpp
basic/src/data/: dict_item.h  gkb_zk.h  manager.h  word_dict.h
basic/src/data/details/: gkb_zk.cpp  manager.cpp  word_dict.cpp
basic/src/data/gkb/: gkb.h
basic/src/details/: basic.cpp
basic/src/model/: chunk.h  chunk_sep.h  confidence.h  name_entity.h  nlu_context.h  phrase.h  segment.h
basic/src/model/analysis_tracer/: analysis_tracer.h
basic/src/model/chunk/: chunk.h
basic/src/model/details/: chunk.cpp  chunk_sep.cpp  confidence.cpp  context.cpp  name_entity.cpp  nlu_context.cpp  phrase.cpp  segment.cpp
basic/src/model/fragment/: chunk.h  chunk_sep.h  conflict_set.h  conflict_set.hpp  fragment.h  fragment_category.h  fragment_executor.h  fragment_instruction.h  fragment_multitag.hpp  fragment_set.h  fragment_set.hpp  fragment_set_non_multi.h  fragment_set_tree.h  manager_fragment_set.h  name_entity.h  non_intersect_fragment_set.h  non_intersect_fragment_set.hpp  segment.h
basic/src/model/kg/: entity.h  kg_adapter.h  kg_adapter_mgr.h  property.h
basic/src/model/pos/: pos.h  pos_tag.h
basic/src/model/pos_ctb/: pos_ctb_tag.h
basic/src/model/semantic_unit/: semantic_unit.h
basic/src/model/syntax/: collection_syntax_tag.h  syntax_tag.h
charles/: CMakeLists.txt
charles/conf/: charles.conf  log.conf  parser.conf  split.conf
charles/data/: global
charles/data/parser/: global
charles/data/parser/refer/: all
charles/data/split/: global
charles/scripts/: worddict_converter.py
charles/src/: charles.h  constant.h  public.h
charles/src/conf/: conf.h
charles/src/conf/details/: conf.cpp
charles/src/details/: charles.cpp  main.cpp
charles/src/interface/: interface.h
charles/src/interface/details/: interface.cpp
charles/src/model/: base_modules.h  clause.h  paragraph.h  runtime.h  sentence.h
charles/src/model/analysis/: analysis_cache.h  analysis_clause.h  analysis_clause_branch.h  analysis_component.h  analysis_context.h  analysis_sentence.h  collection_nlu_context.h  end_tags.h  nlu_context_split.h  sub_branch.h
charles/src/model/details/: base_modules.cpp  clause.cpp  runtime.cpp
charles/src/model/feature/: feature.h  feature_name_entity.h  feature_segments.h
charles/src/model/pos/: pos.h  segment.h
charles/src/model/process/: processor_clause.h  processor_context.h  processor_sentence.h
charles/src/public/: dep.h
charles/src/webserver/: webserver.h
charles/src/webserver/details/: webserver.cpp
charles/test/: CMakeLists.txt
charles/test/conf/: charles.conf  log.conf  milkie.conf  parser.conf  split.conf
charles/test/src/: test_analysis_clause.cpp  test_main.cpp  test_recall.cpp
chunker/: CMakeLists.txt
chunker/conf/: chunker.conf  log.conf  milkie.conf
chunker/data/: global
chunker/data/pattern_expr_union/: global
chunker/src/: chunker.h  public.h
chunker/src/conf/: conf.h
chunker/src/conf/details/: conf.cpp
chunker/src/details/: chunker.cpp
chunker/src/model/: chunk_node.h  matcher.h
chunker/src/model/details/: chunk_node.cpp  matcher.cpp
chunker/src/public/: dep.h
chunker/test/: CMakeLists.txt
chunker/test/conf/: chunker.conf  log.conf
milkie/: CMakeLists.txt
milkie/conf/: milkie.conf
milkie/data/: global
milkie/data/test/: dict
milkie/src/: milkie.h
milkie/src/conf/: conf.h
milkie/src/conf/details/: conf.cpp
milkie/src/details/: milkie.cpp
milkie/src/manager/: manager.h
milkie/src/public/: aho_corasick.hpp  dep.h  public.h
milkie/test/: CMakeLists.txt
milkie/test/conf/: log.conf  milkie.conf
ner/: CMakeLists.txt
ner/data/: surname.dic
ner/src/: name_entity.h  person_name.h
ner/src/conf/: conf.h
ner/src/details/: name_entity.cpp  ner.cpp  person_name.cpp
ner/src/model/: manager_recognizer.h  recognizer.h  recognizer_time.h  recognizer_timer.h
ner/src/public/: dep.h  public.h
pos_tagging/: CMakeLists.txt
pos_tagging/conf/: pos.conf
pos_tagging/context_infer/: context_infer.py
pos_tagging/data/: gkb_zk
pos_tagging/data/pattern_expr_union/: global
pos_tagging/src/: pos_tagging.h  public.h
pos_tagging/src/conf/: conf.h
pos_tagging/src/details/: pos_tagging.cpp
pos_tagging/src/model/: strategy.h  strategy_complement.h  strategy_context_infer.h  strategy_len1.h  strategy_only_pred_or_prep.h  strategy_pos_deduction.h  strategy_special_token.h  strategy_uniq.h  strategy_verb_before_aux.h  strategy_window_statistics.h  window_statistics.h
pos_tagging/src/public/: dep.h
pos_tagging/test/: CMakeLists.txt
pos_tagging/test/conf/: log.conf  pos.conf
pos_tagging/test/src/: test_case.cpp
segmentor/: CMakeLists.txt
segmentor/conf/: log.conf  segmentor.conf
segmentor/data/: regressionCases  trigger.dic
segmentor/data/nature/: nature.map
segmentor/data/word/: china_province_city_county.dic  core.dic
segmentor/src/: constant.h  public.h  segmentor.h
segmentor/src/conf/: conf.h
segmentor/src/data/: BigramDict.h  bigram_dict.h  manager.h  nature_bigram.h  nature_dict.h  surname.h  word_dict.h
segmentor/src/details/: main.cpp  segmentor.cpp
segmentor/src/model/: core_dict_item.h  core_dict_nature.h  core_dict_natures.h  nature.h  numeric_recognizer.hpp
segmentor/src/public/: dep.h  public.h  req_tracer.h
segmentor/test/: CMakeLists.txt
segmentor/test/src/: test_case.cpp  test_regression.cpp
semantic/: CMakeLists.txt
semantic/conf/: log.conf  semantic.conf
semantic/src/: public.h  semantic.h
semantic/src/conf/: conf.h
semantic/src/details/: semantic.cpp
semantic/src/model/: matcher.h
semantic/src/public/: dep.h  public.h
syntax/: CMakeLists.txt
syntax/conf/: log.conf  milkie.conf  parser.conf  syntax.conf
syntax/data/: global
syntax/data/parser/: global
syntax/src/: syntax.h
syntax/src/conf/: conf.h
syntax/src/details/: syntax.cpp
syntax/src/model/: matcher.h
syntax/src/public/: dep.h
syntax/test/: CMakeLists.txt
syntax/test/conf/: parser.conf  syntax.conf
syntax/test/src/: test_recall.cpp
(+268 files in other folders)
